<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"

            android:text="@string/tv_destination_host"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/destination_host"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"

            android:inputType="text"
            android:singleLine="true"
            android:text="@string/destination_host_default" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_weight="0.5"
            android:text="@string/tv_destination_port"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/destination_port"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"

            android:inputType="number"
            android:singleLine="true"
            android:text="@string/receiver_port_default" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal">

        <EditText
            android:id="@+id/message_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"

            android:hint="@string/hint_message_edit_text"
            android:inputType="text"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/send_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"

            android:onClick="onClickSendWeb"
            android:text="@string/btn_send"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <ListView
        android:id="@id/android:list"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"

        android:stackFromBottom="true"
        android:transcriptMode="alwaysScroll"></ListView>

</LinearLayout>